--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "assignment3",
   "version": "1.0.0",
   "description": "NodeJs + Backend project",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Adrian Polesensky and Mani Gudrvardarson",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "express": "^4.17.2"
+  }
 }
