--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "assignment3",
   "version": "1.0.0",
   "description": "NodeJs + Backend project",
-  "main": "src/index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Adrian Polesensky and Mani Gudrvardarson",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.2",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/sqlite3": "^3.1.8",
     "sqlite3": "^5.0.2"
   }
 }
