--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/sqlite3": "^3.1.8",
+    "body-parser": "^1.19.1",
+    "jquery": "^3.6.0",
     "sqlite3": "^5.0.2"
   }
 }
